2.8 Alpha Crash at using "Sample the mesh detail at click point" in sculpt mode, Dynatopo, Constant Detail. #55719

Closed
opened 2018-07-03 14:32:48 +02:00 by toman kirilov · 23 comments

System Information
OS: Windows 10 Pro
GPU: NVidia GTX 1070 Ti

Blender Version
2.8 alpha, 98d2055)

Short description of error

Crash at using "Sample the mesh detail at click point" in sculpt mode, Dynatopo, Constant Detail.

**System Information** OS: Windows 10 Pro GPU: NVidia GTX 1070 Ti **Blender Version** 2.8 alpha, 98d2055) **Short description of error** Crash at using "Sample the mesh detail at click point" in sculpt mode, Dynatopo, Constant Detail.
Author

Added subscriber: @toman.kirilov

Added subscriber: @toman.kirilov

#56387 was marked as duplicate of this issue

#56387 was marked as duplicate of this issue

#56356 was marked as duplicate of this issue

#56356 was marked as duplicate of this issue

#56354 was marked as duplicate of this issue

#56354 was marked as duplicate of this issue

#56191 was marked as duplicate of this issue

#56191 was marked as duplicate of this issue

#56122 was marked as duplicate of this issue

#56122 was marked as duplicate of this issue

#55968 was marked as duplicate of this issue

#55968 was marked as duplicate of this issue

#55967 was marked as duplicate of this issue

#55967 was marked as duplicate of this issue

#56004 was marked as duplicate of this issue

#56004 was marked as duplicate of this issue

#55780 was marked as duplicate of this issue

#55780 was marked as duplicate of this issue

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2018-07-23 21:59:27 +02:00

Confirmed, issue is that current context when this op is invoked is 'top bar' area, not 3DView area… Not sure exactly how this is supposed to work, @ideasman42 think your are familiar with that kind of issues?

Confirmed, issue is that current context when this op is invoked is 'top bar' area, not 3DView area… Not sure exactly how this is supposed to work, @ideasman42 think your are familiar with that kind of issues?

Added subscriber: @AhmedBarakat

Added subscriber: @AhmedBarakat
Added subscribers: @DarkKnight, @JensZetterstrom, @arunsnkr, @lichtwerk

Added subscriber: @valter.novelli

Added subscriber: @valter.novelli

Added subscriber: @imran-13

Added subscriber: @imran-13

Added subscriber: @a_deadman_is_talking_with_you

Added subscriber: @a_deadman_is_talking_with_you

Added subscriber: @hjsrabi

Added subscriber: @hjsrabi

Added subscriber: @aug

Added subscriber: @aug

Added subscriber: @DiegoSG

Added subscriber: @DiegoSG

This issue was referenced by d92d310b15

This issue was referenced by d92d310b158d4b946aa8b811248b25e7a39f7a1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @SzymonMitowski

Added subscriber: @SzymonMitowski
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55719
No description provided.