Fix T55719: crash with sculpt dyntopo and constant detail resolution sampling.